<resources>
    <string name="app_name">Thingtale App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_content_edit">Content edit</string>
    <string name="title_activity_content_creator">Content creator</string>
    <string name="save">Save</string>
    <string name="level">Level</string>
    <string name="page_number">Page Number</string>
    <string name="audio_file">Audio File</string>
    <string name="author">Author</string>
    <string name="book_name">Book Name</string>
    <string name="book_isbn">Book ISBN</string>
    <string name="language">Language</string>
    <string name="title_activity_scanner">QRCode scanner</string>
    <string name="audio_file_missing">audio file not found in database</string>
    <string name="title_activity_reader">reading book</string>
    <string name="page">page</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
</resources>
